2009-03-25  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.28

2009-03-24  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	Event handlers now return void and cannot stop processing
	of further events.
	Accoding to Kimmo:
	Fixes NB#105014.
	
	* src/home/hd-home.c:
	* src/mb/hd-animation-actor.c:
	* src/mb/hd-note.c:
	* src/util/hd-util.c:

2009-03-24  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	105061 ROTATION: Incoming call dialog in home view is not
	       in portrait layout

	Support portrait mode in home view.  A bit.
	This is necessary to show dialogs in home view which request
	portrait mode.

	* src/home/hd-render-manager.h:
	  New state, HDRM_STATE_HOME_PORTRAIT, which is like HDRM_STATE_HOME.
	  Added STATE_IS_PORTRAIT() and STATE_IS_PORTRAIT_CAPABLE().
	* src/home/hd-render-manager.c:
	  Added hd_render_manager_set_state_portrait() and *_unportrait().
	  Handle HDRM_STATE_HOME_PORTRAIT.
	* src/mb/hd-comp-mgr.c:
	  Also switch between HOME and HOME_PORTRAIT.
	* src/home/hd-home.c
	* src/home/hd-home-view.c:
	  Rotate the backgrounds back if we're going to portrait mode.
	* src/util/hd-util.c:
	  Create a modal blocker large enough to be ok both in portrait
	  and landscape modest.

2009-03-23  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-render-manager.c (hd_render_manager_set_visibilities):
	  Don't add hidden actors to the list of blockers since it doesn't
	  block anything.  May fix some actual problems.

2009-03-23  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/mb/hd-theme.c (back_button_timeout): Add some NULL guards. The
	original code was strangely brave in this respect. Should fix
	NB#103447.

2009-03-23  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-dialog.c (hd_dialog_request_geometry):
	  FKB regression fix.  Ignore decorations when decorations are
	  to be ignored.  Don't reserve cancel area for fullscreen dialogs.
	  Bocsi.

2009-03-23  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.27
